bookinfo_ing.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: bookinfo
    namespace: teste
  spec:
    ingressClassName: nginx
    rules:
    - host: book.spacesecuritynetwork.local
      http:
        paths:
        - backend:
            service:
              name: productpage
              port:
                nunber: 9080
          path: /
          pathType: ImplementationSpecific
kind: List
metadata:
  resourceVersion: ""
