regra_istio.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: 
   name: teste-policy
   namespace: teste
spec:
  selector:
    matchLabels:
      app: ratings
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: 
          - default
          - teste
          - istio-system
